@@ -9,7 +9,9 @@ echo "############################################################"
 test $TOMCAT_URIENCODING = 'UTF-8' && sed -i -r -e 's/URIEncoding=\S+/URIEncoding="UTF-8"/g' ${CATALINA_BASE}/conf/server.xml
 test $TOMCAT_URIENCODING = 'ISO-8859-1' && sed -i -r -e 's/URIEncoding=\S+/URIEncoding="ISO-8859-1"/g' ${CATALINA_BASE}/conf/server.xml
 
-#export CATALINA_OPTS="$CATALINA_OPTS -server"
+export CATALINA_OPTS="$CATALINA_OPTS -server "
+export CATALINA_OPTS="$CATALINA_OPTS -Duser.timezone=GMT+08 -XX:PermSize=512M -XX:MaxPermSize=512M -Dspring.profiles.active=pro "
+export CATALINA_OPTS="$CATALINA_OPTS -Dcom.sun.management.jmxremote.port=8089 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false "
 
 #export CATALINA_OPTS="$CATALINA_OPTS -XX:+UseParallelGC"
 
